# serializer version: 1
# name: test_all_entities[sensor.homeassistant_analytics_hacs_custom-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.homeassistant_analytics_hacs_custom',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'hacs (custom)',
    'platform': 'analytics_insights',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'custom_integrations',
    'unique_id': 'custom_hacs_active_installations',
    'unit_of_measurement': 'active installations',
  })
# ---
# name: test_all_entities[sensor.homeassistant_analytics_hacs_custom-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Homeassistant Analytics hacs (custom)',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'active installations',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.homeassistant_analytics_hacs_custom',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '157481',
  })
# ---
# name: test_all_entities[sensor.homeassistant_analytics_myq-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.homeassistant_analytics_myq',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'myq',
    'platform': 'analytics_insights',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'core_integrations',
    'unique_id': 'core_myq_active_installations',
    'unit_of_measurement': 'active installations',
  })
# ---
# name: test_all_entities[sensor.homeassistant_analytics_myq-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Homeassistant Analytics myq',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'active installations',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.homeassistant_analytics_myq',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_all_entities[sensor.homeassistant_analytics_spotify-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.homeassistant_analytics_spotify',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'spotify',
    'platform': 'analytics_insights',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'core_integrations',
    'unique_id': 'core_spotify_active_installations',
    'unit_of_measurement': 'active installations',
  })
# ---
# name: test_all_entities[sensor.homeassistant_analytics_spotify-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Homeassistant Analytics spotify',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'active installations',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.homeassistant_analytics_spotify',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '24388',
  })
# ---
# name: test_all_entities[sensor.homeassistant_analytics_total_active_installations-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.homeassistant_analytics_total_active_installations',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Total active installations',
    'platform': 'analytics_insights',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'total_active_installations',
    'unique_id': 'total_active_installations',
    'unit_of_measurement': 'active installations',
  })
# ---
# name: test_all_entities[sensor.homeassistant_analytics_total_active_installations-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Homeassistant Analytics Total active installations',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'active installations',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.homeassistant_analytics_total_active_installations',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '310400',
  })
# ---
# name: test_all_entities[sensor.homeassistant_analytics_total_reported_integrations-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.homeassistant_analytics_total_reported_integrations',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Total reported integrations',
    'platform': 'analytics_insights',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'total_reports_integrations',
    'unique_id': 'total_reports_integrations',
    'unit_of_measurement': 'active installations',
  })
# ---
# name: test_all_entities[sensor.homeassistant_analytics_total_reported_integrations-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Homeassistant Analytics Total reported integrations',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'active installations',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.homeassistant_analytics_total_reported_integrations',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '249256',
  })
# ---
# name: test_all_entities[sensor.homeassistant_analytics_youtube-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.homeassistant_analytics_youtube',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YouTube',
    'platform': 'analytics_insights',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'core_integrations',
    'unique_id': 'core_youtube_active_installations',
    'unit_of_measurement': 'active installations',
  })
# ---
# name: test_all_entities[sensor.homeassistant_analytics_youtube-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Homeassistant Analytics YouTube',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'active installations',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.homeassistant_analytics_youtube',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '339',
  })
# ---
# name: test_all_entities[sensor.total_active_installations-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.total_active_installations',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Total active installations',
    'platform': 'analytics_insights',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'total_active_installations',
    'unique_id': 'total_active_installations',
    'unit_of_measurement': 'active installations',
  })
# ---
# name: test_all_entities[sensor.total_active_installations-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Homeassistant Analytics Total active installations',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'active installations',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.total_active_installations',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '310400',
  })
# ---
# name: test_all_entities[sensor.total_reports_integrations-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.total_reports_integrations',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Total reported integrations',
    'platform': 'analytics_insights',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'total_reports_integrations',
    'unique_id': 'total_reports_integrations',
    'unit_of_measurement': 'active installations',
  })
# ---
# name: test_all_entities[sensor.total_reports_integrations-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Homeassistant Analytics Total reported integrations',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'active installations',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.total_reports_integrations',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '249256',
  })
# ---
